--- a/practica/index.html
+++ b/practica/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mascotas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <form id="petForm">
 
-    </form>
+<body>
+    <div class="row h-100">
+        <div class="col-50">
+            <form id="petForm" class="border-form">
+                <h1 class="text-center">Gestión Mascotas</h1>
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" placeholder="" class="border-input">
+                </div>
+                <div class="form-group">
+                    <label>Descripción</label>
+                    <input type="text" placeholder="" class="border-input">
+                </div>
+                <div class="form-group">
+                    <label>ImagenURL</label>
+                    <input type="url" placeholder="" class="border-input">
+                </div>
+                <div class="form-group">
+                    <label>Fecha de nacimiento</label>
+                    <input type="date" placeholder="" class="border-input">
+                </div>
+                <div class="form-group">
+                    <label>Precio</label>
+                    <input type="number" placeholder="" class="border-input"> €
+                </div>
+                <div class="form-group">
+                    <label>Codigo</label>
+                    <input type="text" placeholder="" class="border-input">
+                </div>
+                <div class="button-container">
+                    <button type="submit" class="btn">Agregar mascota</button>
+                </div>
+                
+            </form>
+        </div>
+        <div class="col-50">
+            <form id="petForm" class="border-form">
+                <h1 class="text-center">Lista De Mascotas</h1>
+            </form>
+
+        </div>
+    </div>
     <section id="petList">
 
     </section>
 </body>
+
 </html>
