--- a/practica/index.html
+++ b/practica/index.html
@@ -9,33 +9,36 @@
 </head>
 
 <body>
-    <div class="row h-100">
+    <div class="row">
         <div class="col-50">
             <form id="petForm" class="border-form">
-                <h1 class="text-center">Gestión Mascotas</h1>
+                <h1 class="text-center">Gestión de Mascotas</h1>
                 <div class="form-group">
-                    <label>Nombre</label>
-                    <input type="text" placeholder="" class="border-input">
+                    <label for="petName">Nombre</label>
+                    <input type="text" id="petName" name="petName" class="border-input" required>
                 </div>
                 <div class="form-group">
-                    <label>Descripción</label>
-                    <input type="text" placeholder="" class="border-input">
+                    <label for="petDescription">Descripción</label>
+                    <textarea id="petDescription" name="petDescription" class="border-input" required></textarea>
                 </div>
                 <div class="form-group">
-                    <label>ImagenURL</label>
-                    <input type="url" placeholder="" class="border-input">
+                    <label for="petImage">URL de la Imagen</label>
+                    <input type="url" id="petImage" name="petImage" class="border-input" required>
                 </div>
                 <div class="form-group">
-                    <label>Fecha de nacimiento</label>
-                    <input type="date" placeholder="" class="border-input">
+                    <label for="petBirthDate">Fecha de nacimiento</label>
+                    <input type="date" id="petBirthDate" name="petBirthDate" class="border-input" required>
                 </div>
                 <div class="form-group">
-                    <label>Precio</label>
-                    <input type="number" placeholder="" class="border-input"> €
+                    <label for="petPrice">Precio</label>
+                    <div class="price-input">
+                        <input type="number" id="petPrice" name="petPrice" class="border-input" min="0" step="0.01" required>
+                        <span class="currency">€</span>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label>Codigo</label>
-                    <input type="text" placeholder="" class="border-input">
+                    <label for="petCode">Código</label>
+                    <input type="text" id="petCode" name="petCode" class="border-input" placeholder="Ej: DOG123" pattern="[A-Z]{3}[0-9]{3}" required>
                 </div>
                 <div class="button-container">
                     <button type="submit" class="btn">Agregar mascota</button>
@@ -44,15 +47,15 @@
             </form>
         </div>
         <div class="col-50">
-            <form id="petForm" class="border-form">
+            <div class="border-form">
                 <h1 class="text-center">Lista De Mascotas</h1>
-            </form>
-
+                <div id="petList" class="pet-grid">
+                  
+                </div>
+            </div>
         </div>
     </div>
-    <section id="petList">
-
-    </section>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
